2009-06-30  Cyril Robert <crobert@inverse.ca>

	* UI/WebServerResources/MailerUI.js: Added drag & drop support!
	* UI/MailPartViewers/UIxMailPartHTMLViewer.m: Removed an extra NSLog

2009-06-29  Cyril Robert <crobert@inverse.ca>

	* UI/WebServerResources/ContactsUI.js: Added drag & drop support!
	* UI/WebServerResources/ContactsUI.js: Disabled drag & drop for lists

2009-06-29  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/SOGo/SOGoParentFolder.m ([SOGoParentFolder
	-initSubFolders]): system folders (LDAP sources) are now loaded
	unconditionally.
	([SOGoFolderParent -initSubscribedSubFolders]): new method to load
	only subscribed folders.
	([SOGoParent -lookupName:inContext:acquire:]): we now properly
	lookup in subscribed folders.
	([SOGoParentFolder -subFolders]): since the subscribed folders are
	now stored in its own dictionary, we must return keys from both
	dictionaries.

2009-06-26  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Contacts/UIxContactsListViewContainer.[hm]: this class was
	removed along with the template and moved to UIxContactFoldersView.

2009-06-26  Cyril Robert <crobert@inverse.ca>

	* UI/WebServerResources/UIxPreferences.js: Fixed a bug when
	ComposeMessagesType isn't set, removed an "alert"

2009-06-25  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Mailer/SOGoMailReply.m: Added proper blockquote
	* UI/WebServerResources/UIxMailEditor.js: Use CKeditor
	* SoObjects/Mailer/SOGoMailForward.m: Added htmlComposition property,
	changed almost all methods to escape what needsto be escaped.
	* UI/WebServerResources/UIxPreferences.js: Fixed CKeditor toggle issue

2009-06-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m (-davSyncCollection:): certain
	dav attribute methods do not necessitate additional fields, we
	declare their corresponding fields to "". Also, we make sure those
	fake fields are not specified in the SQL query and we ensure all
	the fields are only requested once each.
